Fix source to get USV-conversation image from github repo

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="What-is-this?">What is this?<a class="anchor-link" href="#What-is-this?">&#182;</a></h1><p>This is an analysis of <a href="https://www.USV.com">USV.com</a> post data from inception to Feb 2015. For a few years, USV.com was my favorite place to hang out on the internet. There was once a section on the website called "Conversation". It looked like this:<br>
-<img src="images/USV-conversation-1.png" alt="Conversation">
+<img src="https://raw.githubusercontent.com/ewharton/USV.com/master/images/USV-conversation-1.png" alt="Conversation">
 Any user could submit links to an article. The community would comment and upvote them. The links were ranked by comments, upvotes and time submitted. This started as a Hack Day project to understand who was contributing value to the community and topics the community liked to discuss.</p>
 <p>There are three sections:</p>
 <p><strong>Poster segments</strong>: Identify poster segments, who is in them and how they compare against each other.  <br />
